--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,13 +18,13 @@
           </div>
         </div>
   
-        <div class="flex items-center justify-between">
-          <div class="flex items-center">
+        <div class="flex items-center justify-center text-center">
+          <!-- <div class="flex items-center">
             <input  id="remember-me" name="remember-me" type="checkbox" class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500">
             <label for="remember-me" class="ml-2 block text-sm text-gray-900">Remember me</label>
-          </div>
+          </div> -->
   
-          <div class="text-sm">
+          <div class="text-sm w-full">
             <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500">Forgot your password?</a>
           </div>
         </div>
